objects/ssot__ProgramTermApplicationTimeline__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AcademicTermId__c</fullName>
        <label>Academic Term</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ActionPlanTemplateVersionId__c</fullName>
        <label>Action Plan Template Version</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ApplicationTimelineId__c</fullName>
        <label>Application Timeline</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Program Term Application Timeline Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LearningProgramId__c</fullName>
        <label>Learning Program</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LearningProgramPlanId__c</fullName>
        <label>Learning Program Plan</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1719817651692_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ProgramTermApplicationTimeline_Acade_rel</label>
        <referenceTo>ssot__AcademicTerm__dlm</referenceTo>
        <relationshipLabel>ProgramTermApplicationTimeline_Acade_rel</relationshipLabel>
        <relationshipName>rel_1719817651692_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1719818166709_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ProgramTermApplicationTimeline_Actio_rel</label>
        <referenceTo>ssot__ActionPlanTemplateVersion__dlm</referenceTo>
        <relationshipLabel>ProgramTermApplicationTimeline_Actio_rel</relationshipLabel>
        <relationshipName>rel_1719818166709_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1719818619937_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ProgramTermApplicationTimeline_Appli_rel</label>
        <referenceTo>ssot__ApplicationTimeline__dlm</referenceTo>
        <relationshipLabel>ProgramTermApplicationTimeline_Appli_rel</relationshipLabel>
        <relationshipName>rel_1719818619937_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>